@@ -1,8 +1,8 @@
 Package: intubate
 Type: Package
 Title: Interface to Popular R Functions for Data Science Pipelines
-Version: 1.3.0
-Date: 2016-09-08
+Version: 1.4.0
+Date: 2016-09-09
 Author: Roberto Bertolusso
 Maintainer: Roberto Bertolusso <rbertolusso@rice.edu>
 Description:
