@@ -6,8 +6,8 @@
 \tabular{ll}{
 Package: \tab intubate\cr
 Type: \tab Package\cr
-Version: \tab 1.3.0\cr
-Date: \tab 2016-09-02\cr
+Version: \tab 1.4.0\cr
+Date: \tab 2016-09-09\cr
 License: \tab GPL (>=2)\cr
 }
 See examples of use below.
