@@ -1,8 +1,15 @@
+2016-09-09  Roberto Bertolusso  <rbertolusso@rice.edu>
+
+        * 1.4.0 (not released to CRAN).
+        
+        * Creation of interfaces "on demand" in package:intubate
+          environment.
+
 2016-09-08  Roberto Bertolusso  <rbertolusso@rice.edu>
 
         * 1.3.0 (not released to CRAN).
         
-        * You can now remove all interfaces.
+        * intubate_rm_all_interfaces lets remove all interfaces.
 
 2016-09-02  Roberto Bertolusso  <rbertolusso@rice.edu>
 
